--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -61,28 +61,9 @@
           </div>
         </div>
       </div>
-    
-      <!-- TODO: noch auf ort.lat/ort.lon umstellen -->
-      <div class="panel panel-default" id="mapedit" >
-        <div class="panel-heading">
-          <h2 class="panel-title">Standort</h2>
-        </div>
-        <div class="panel-body">
-          <p>Klicke auf die Karte, um den Standort genau festzulegen.</p>
-          <input type="text" name="search" placeholder="Hier zukünftig suchen" id="search" class="form-control">
-            <!-- f.hidden_field :lat, class: "form-control" -->
-            <!-- f.hidden_field :lon, class: "form-control" -->
-            <%= hidden_field_tag :lat, (@anlage.ort ? @anlage.ort.lat : nil) %>
-            <%= hidden_field_tag :lon, (@anlage.ort ? @anlage.ort.lon : nil) %>
-        </div>
-        
-        <div id="map" style="height: 300px;"></div>
-        <!-- Javascript im Ordner app/assets/javascripts ablegen -->
-        <script>
-          geomap("ort");
-        </script>
-        
-      </div>
+      
+      <!-- TODO: noch auf ort.lat/ort.lon umstellen ?-->
+      <%= render "orte/ort_eingabe", titel: "Standort", ort: @anlage.ort %>
       
     </div>
  
