--- a/app/views/umschlaege/_form.html.erb
+++ b/app/views/umschlaege/_form.html.erb
@@ -13,58 +13,68 @@
       </div>
   <% end %>
     
-  <div class="panel panel-default">
-      <div class="panel-heading">
-        <h2 class="panel-title">Umschlagsdaten eingeben</h2>
-      </div>
-      <div class="panel-body">
-  
-  
-        <%= hidden_field_tag :transport_id, (@transport ? @transport.id : nil) %>
-        
-        <div class="row">
-          
-          <div class="col-sm-6">
-            <div class="form-group">
-              <strong>Umschlagsort:</strong>
-              <%= f.text_field :ort, class: "form-control" %>
-            </div>
-            <div class="form-group">
-              <strong>Terminal:</strong>
-              <%= f.text_field  :terminal, class: "form-control" %>
-            </div>
-          </div>
-          
-          <div class="col-sm-6">
-            <div class="form-group">
-              <strong>Ankunft des Schiffes:</strong>
-              <%= f.text_field  :start_datum, class: "form-control" %>
-            </div>
-            <div class="form-group">
-              <strong>Abfahrt der Ladung:</strong>
-              <%= f.text_field  :end_datum, class: "form-control" %>
-            </div>
-          </div>
-          
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title">Umschlagsdaten eingeben</h2>
         </div>
-        
-
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="form-group">
-                Firma (Umschlag): 
-                <%= collection_select(:umschlag, :firma_id, Firma.all, :id, :name, class: "form-control") %>
+        <div class="panel-body">
+    
+    
+          <%= hidden_field_tag :transport_id, (@transport ? @transport.id : nil) %>
+          
+          <div class="row">
+            
+            <div class="col-sm-6">
+              <div class="form-group">
+                <strong>Umschlagsort:</strong>
+                <%= f.text_field :ort, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <strong>Terminal:</strong>
+                <%= f.text_field  :terminal, class: "form-control" %>
+              </div>
             </div>
+            
+            <div class="col-sm-6">
+              <div class="form-group">
+                <strong>Ankunft des Schiffes:</strong>
+                <%= f.text_field  :start_datum, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <strong>Abfahrt der Ladung:</strong>
+                <%= f.text_field  :end_datum, class: "form-control" %>
+              </div>
+            </div>
+            
+            
+            
           </div>
-          <div class="col-sm-6">
-            <div class="form-group">
-                <%= link_to "Neue Firma anlegen", new_firma_path, class: "btn btn-success" %>
+          
+
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                  Firma (Umschlag): 
+                  <%= collection_select(:umschlag, :firma_id, Firma.all, :id, :name, class: "form-control") %>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                  <%= link_to "Neue Firma anlegen", new_firma_path, class: "btn btn-success" %>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  
+    
+    <div class="col-sm-4">
+      <%= render "orte/ort_eingabe", titel: "Umschlagsort", ort: (@anlage ? @anlage.ort : nil) %>
+    </div>
+    
+  </div>
 
   <div class="actions">
     <%= link_to "Abbruch", @transport, class: "btn btn-primary" %>
