--- a/app/views/abfragen/index.html.erb
+++ b/app/views/abfragen/index.html.erb
@@ -12,7 +12,7 @@
       <%= render "auswahl_panel", typ: "Stoff", auswahl: @stoff_auswahl %>
     </div>
     <div class="col-sm-4">
-       <%= submit_tag "Passende Transporte anzeigen" %>
+       <%= submit_tag "Passende Transporte anzeigen", class: "btn btn-primary" %>
     </div>
   </div>
   
