--- a/app/views/abfragen/_auswahl_panel.html.erb
+++ b/app/views/abfragen/_auswahl_panel.html.erb
@@ -2,16 +2,18 @@
       <div class="panel-heading">
         <h3 class="panel-title"><%= typ %> </h3>
       </div>
-      <ul class="list-group">
-		<div class: "list-group-item">
-		  <%= check_box_tag "#{typ}-alle" %>
-		  Alle
-		</div>
-        <% auswahl.each do |auswahl_bezeichnung, auswahl_id| %>
-          <div class: "list-group-item"> 
-		    <%= check_box_tag "#{typ}-#{auswahl_id}" %>
-            <%= auswahl_bezeichnung %>
+      <div class="panel-body"
+        <ul class="list-group">
+          <div class: "list-group-item">
+            <%= check_box_tag "#{typ}-alle" %>
+            Alle
           </div>
-        <% end %>
-      </ul>
+          <% auswahl.each do |auswahl_bezeichnung, auswahl_id| %>
+            <div class: "list-group-item"> 
+              <%= check_box_tag "#{typ}-#{auswahl_id}" %>
+              <%= auswahl_bezeichnung %>
+            </div>
+          <% end %>
+        </ul>
+      </div>
     </div>
