--- a/app/views/orte/show.html.erb
+++ b/app/views/orte/show.html.erb
@@ -43,6 +43,23 @@
         </div>
       </div>
     <% end %>
+    
+    <% unless @ort.transporte.empty? %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Transporte (nach Datum)</h3>
+        </div>
+        <div class="panel-body">
+          <ul>
+            <% @ort.transporte.each do |transport| %>
+              <li>
+                <%= link_to transport.datum, transport %>
+              </li>
+            <% end %>
+          </ul> 
+        </div>
+      </div>
+    <% end %>
   </div>
  
   <div class="col-sm-6">
