Anlagen und Orte - Ortseingabe bei nichtfinden

--- a/app/views/orte/_ort_eingabe.html.erb
+++ b/app/views/orte/_ort_eingabe.html.erb
@@ -8,7 +8,7 @@
           <!-- Formularschachetlung geht in Rails nämlich leider nicht -->
           <div class="form-group">
             <%= label_tag :name, "Ortsname" %>
-            <%= text_field_tag :name, (ort && ort.name ? ort.name : ""), class: "form-control" %>
+            <%= text_field_tag :ortname, (ort && ort.name ? ort.name : ""), class: "form-control" %>
             <%= label_tag :plz, "PLZ" %>
             <%= text_field_tag :plz, (ort && ort.plz ? ort.plz : ""), class: "form-control" %>
           </div>
