--- a/app/views/orte/ortswahl.html.erb
+++ b/app/views/orte/ortswahl.html.erb
@@ -2,3 +2,5 @@
 <% @orte.each do |ort_hash| %>
   <%= render "auswahl_ort", ort: ort_hash["ort"], auswahl_link: ort_hash["link"] %> 
 <% end %>
+<!-- Todo-Parameter vom ort-hash uebernehmen -->
+<%= link_to "Neuer Ort", new_ort_path, class:"btn btn-primary" %>
