--- a/app/views/stoffe/_form_modal.html.erb
+++ b/app/views/stoffe/_form_modal.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@stoff) do |f| %>
 
-  <div class="modal fade" id="stoffModal" tabindex="-1" role="dialog" aria-labelledby="stoffModalLabel" aria-hidden="true">
+  <div class="modal fade" id="stoffModal-<%=objekt.id%>" tabindex="-1" role="dialog" aria-labelledby="stoffModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         
@@ -24,7 +24,7 @@
            
           <div class="form-group">
             <%= f.label :bezeichnung, "Bezeichung" %>
-            <%= f.text_field :bezeichnung, class: "form-control" %>
+            <%= f.text_field :bezeichnung, class: "form-control", value: objekt.synonym %>
           </div>
           <div class="row">
             <div class="form-group col-xs-6">
