--- a/app/views/anlagen/index.html.erb
+++ b/app/views/anlagen/index.html.erb
@@ -1,10 +1,11 @@
+<h1>
+Atomanlagen
 <% if is_editor? %>
   <div class="btn-group header-buttons">
     <%= link_to 'Neue Atomanlage', new_anlage_path, class: "btn btn-success" %>
   </div>
 <% end %>
-
-<h1>Atomanlagen</h1>
+</h1>
 
 <div class="row">
 
