--- a/app/views/upload/_wert_zuordnen.html.erb
+++ b/app/views/upload/_wert_zuordnen.html.erb
@@ -3,7 +3,7 @@
     <%= form_tag({action: action}, multipart: true, class: "form-horizontal") do %>
       <div class="form-group">
         
-        <label for="<%=typ %> class="col-xs-3 control-label"><code><%= synonym.synonym %></code></label>
+        <label for="<%=typ %>" class="col-xs-3 control-label"><code><%= synonym.synonym %></code></label>
         
         <div class="col-xs-9">
           <%= select_tag typ.to_sym, options_for_select(all_werte), class: "form-control" %>
