--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,9 @@
+<h1><%= @user.name %>
 <% if is_admin? %>
   <div class="btn-group header-buttons">
         <%= link_to 'Bearbeiten', edit_user_path(@user), class: "btn btn-primary" %>
         <%= link_to 'Löschen', @user, method: :delete, data: { confirm: 'Willst du den Benutzer wirklich löschen?' }, class: "btn btn-danger" %></td>
   </div>
 <% end %>
-<h1><%= @user.name %></h1>
+</h1>
 <p><strong>E-Mail: </strong><%= @user.email %></p>
