--- a/app/views/anlagen/_form_modal.html.erb
+++ b/app/views/anlagen/_form_modal.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@anlage) do |f| %>
 
-  <div class="modal fade" id="anlagenModal-<%= objekt.id %>" tabindex="-1" role="dialog" aria-labelledby="anlagenModalLabel" aria-hidden="true">
+  <div class="modal fade" id="anlagenModal-<%= objekt.id if defined?(objekt) %>" tabindex="-1" role="dialog" aria-labelledby="anlagenModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         
@@ -23,7 +23,13 @@
           <% end %>
           <div class="form-group">
             <%= f.label :name, "Name" %>
-            <%= f.text_field :name, class: "form-control", value: objekt.synonym %>
+            <%=
+              if defined?(objekt)
+                f.text_field :name, class: "form-control", value: objekt.synonym
+              else
+                f.text_field :name, class: "form-control"
+              end
+            %>
           </div>
           <div class="form-group">
             <%= f.label :anlagen_kategorie, "Typ" %>
