Ortsfunktionen bei Umschlaegen hinzugefuegt, ausgelagert in concern-modul orte_auswahl

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,6 +33,7 @@
               <li><%= link_to "Transportfirmen", firmen_path %></li>
               <li><%= link_to "Transporte", transporte_path %></li>
               <li><%= link_to "Beobachtungen", beobachtungen_path %></li>
+              <li><%= link_to "Orte", orte_path %></li>
             </ul>
           </li>
           <li class="dropdown">
