--- a/app/views/transportabschnitte/_show_abschnitt.html.erb
+++ b/app/views/transportabschnitte/_show_abschnitt.html.erb
@@ -14,17 +14,31 @@
   <% if abschnitt.start_datum && abschnitt.end_datum %>
     (<%= abschnitt.start_datum.strftime("%d.%m.%Y") %> – <%= abschnitt.end_datum.strftime("%d.%m.%Y") %>)
   <% end %>
-
-  <%= link_to "Details", abschnitt %>
-  | <%= link_to "Bearbeiten", edit_transportabschnitt_path(abschnitt) %>
-
   
-  <% if abschnitt.start_datum && abschnitt.end_datum %>
-    <br />
-    <%= link_to "Abschnitt davor anlegen", new_transportabschnitt_path(transport_id: abschnitt.transport.id, abschnitt_danach: abschnitt.id) %>
-    | <%= link_to "Abschnitt danach anlegen", new_transportabschnitt_path(transport_id: abschnitt.transport.id, abschnitt_davor: abschnitt.id) %>
-    | <%= link_to "Umschlag davor anlegen", new_umschlag_path(transport_id: abschnitt.transport.id, abschnitt_danach: abschnitt.id) %>
-    | <%= link_to "Umschlag danach anlegen", new_umschlag_path(transport_id: abschnitt.transport.id, abschnitt_davor: abschnitt.id) %>
+
+  <% if logged_in? %>
+    <%= link_to "Bearbeiten", edit_transportabschnitt_path(abschnitt) %>
+    | <%= link_to 'Löschen', abschnitt, method: :delete, data: { confirm: 'Willst du den Transportabschnitt wirklich löschen?' } %>
+
+    
+    <% if abschnitt.start_datum && abschnitt.end_datum %>
+      <br />
+      <%= link_to "Abschnitt davor anlegen", new_transportabschnitt_path(transport_id: abschnitt.transport.id, abschnitt_danach: abschnitt.id) %>
+      | <%= link_to "Abschnitt danach anlegen", new_transportabschnitt_path(transport_id: abschnitt.transport.id, abschnitt_davor: abschnitt.id) %>
+      | <%= link_to "Umschlag davor anlegen", new_umschlag_path(transport_id: abschnitt.transport.id, abschnitt_danach: abschnitt.id) %>
+      | <%= link_to "Umschlag danach anlegen", new_umschlag_path(transport_id: abschnitt.transport.id, abschnitt_davor: abschnitt.id) %>
+    <% end %>
   <% end %>
+  
+  <% unless abschnitt.beobachtungen.empty? %>
+      <br /> 
+      Beobachtungen: 
+      <% number = 1 %>
+      <% abschnitt.beobachtungen.each do |beobachtung| %>
+        <%= link_to beobachtung.ort.to_s, beobachtung %>, 
+      <% end %>
+  <% end %>
+    
+  
   <br />
 </div>
