--- a/app/views/transporte/_show_transport_grunddaten.html.erb
+++ b/app/views/transporte/_show_transport_grunddaten.html.erb
@@ -28,6 +28,11 @@
       <%= transport.behaelter ? "Die Behälter waren vom Typ #{transport.behaelter}." : nil %>
       <%= transport.anzahl ? "Es fanden #{transport.anzahl} Transporte statt." : nil %>
     </p>
+    
+    <p>
+      <strong>Quelle:</strong>
+      <%= transport.quelle %>
+    </p>
 
   </div>
 </div>
