--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,25 +36,23 @@
               <li><%= link_to "Orte", orte_path %></li>
             </ul>
           </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Abruf <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "Listing der Transporte", transporte_path %></li>
-              <li><%= link_to "Transport-Abfragen", abfragen_index_path %></li>
-            </ul>
-          </li>
+          
           
         <% else %>
         
           <li><%= link_to "Beobachtung melden", new_beobachtung_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "Atomanlagen", anlagen_path %></li>
-            </ul>
-          </li>
+          
           
         <% end %>
+        
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Abruf <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Transport-Abfragen", abfragen_index_path %></li>
+              <li><%= link_to "Listing der Transporte", transporte_path %></li>
+              <li><%= link_to "Gespeicherte Atomanlagen", anlagen_path %></li>
+            </ul>
+        </li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
