seeds.rb kann jetzt jederzeit benutzt werden, Kleinigkeiten

--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -58,6 +58,7 @@
     
     <div class="col-sm-5">
 
+      <!-- TODO: noch auf ort.lat/ort.lon umstellen ?-->
       <%= render "orte/ort_eingabe", titel: "Standort", ort: @anlage.ort %>
       
     </div>
