--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -43,7 +43,7 @@
             //javascript dafeur mehrfach benutzbar, also ausgelagert in setup_datetimepicker.js
             setup_datetimepicker('#datetimepicker-ankunft')
             setup_datetimepicker('#datetimepicker-abfahrt')
-            // keine Ahnung wozu das da ist?
+            // javascript, um Erklärungen unter Fragezeichen anzuzeigen
             $(function () {
                 $('.glyphicon-question-sign').tooltip();
             });
