--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,12 +26,13 @@
   
   <div class="container">
     <div class="row">
-      <div class="col-sm-5">
+      <div class="col-sm-6">
+        <h2>Aktuelle Transporte</h2>
+        <%= render "aktuelle_transporte" %>
+      </div>
+      <div class="col-sm-6">
         <h2>Transporte vor deiner Haustür?</h2>
         <input type="text" class="form-control">
-      </div>
-      <div class="col-sm-5 col-sm-offset-2">
-        <h2>Aktuelle Transporte</h2>
       </div>
     </div>
   </div>
