--- a/app/assets/stylesheets/abfragen.css.scss
+++ b/app/assets/stylesheets/abfragen.css.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.panel .calendar-body {
+  overflow-x: scroll;
+  padding: 0;
+}
+
+.panel table.calendar {
+  margin: 0
+}
+
 .calendar-title {
   font-size: 200% !important;
 }
